# trial

./: .pre-commit-config.yaml  Dockerfile  README.md  check_env.sh  main.py  pyproject.toml  rag_chain.py  requirements.txt  retriever.py
faiss_index/: index.faiss  index.pkl
faiss_retriever/: __init__.py  rag_chain.py  retriever.py  utils.py
