[tool.poetry]
name = "agrirag"
version = "0.1.0"
description = ""
authors = ["George Okello <142576760+G-Okello-O@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
accelerate = "0.33.0"
aiofiles = "23.2.1"
anyio = "3.7.1"
appdirs = "1.4.4"
asyncer = "0.0.2"
backoff = "2.2.1"
bidict = "0.23.1"
boto3 = "1.35.2"
botocore = "1.35.2"
cfgv = "3.4.0"
chardet = "3.0.4"
chevron = "0.14.0"
click = "8.1.7"
cloudpickle = "2.2.1"
cohere = "5.8.1"
datasets = "2.21.0"
deepdiff = "7.0.1"
deprecated = "1.2.14"
dill = "0.3.8"
distlib = "0.3.8"
docutils = "0.20.1"
docx2txt = "0.8"
eli5 = "0.13.0"
emoji = "2.12.1"
et-xmlfile = "1.1.0"
faiss-cpu = "1.8.0.post1"
fastapi = "0.110.3"
fastavro = "1.9.5"
filelock = "3.15.4"
filetype = "1.2.0"
flagembedding = "1.2.11"
fsspec = "2024.6.1"
future = "1.0.0"
geocoder = "1.38.1"
googleapis-common-protos = "1.63.2"
googletrans = "2.4.0"
graphviz = "0.20.3"
grpcio = "1.51.1"
grpcio-status = "1.48.2"
h11 = "0.14.0"
h2 = "3.2.0"
hpack = "3.0.0"
hstspreload = "2024.8.1"
httpcore = "1.0.5"
httpx = "0.27.2"
httpx-sse = "0.4.0"
huggingface-hub = "0.24.6"
hyperframe = "5.2.0"
identify = "2.6.0"
idna = "2.10"
importlib-metadata = "8.0.0"
ipython = "7.34.0"
jiter = "0.5.0"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonpath-python = "1.0.6"
langdetect = "1.0.9"
lazify = "0.4.0"
literalai = "0.0.607"
llvmlite = "0.41.1"
lockfile = "0.12.2"
lxml = "5.3.0"
mixpanel = "4.10.1"
mpmath = "1.3.0"
multiprocess = "0.70.16"
networkx = "3.1"
nltk = "3.9.1"
nodeenv = "1.9.1"
numba = "0.58.0"
numpy = "1.24.4"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.6.20"
nvidia-nvtx-cu12 = "12.1.105"
ollama = "0.3.1"
openai = "1.42.0"
opentelemetry-api = "1.26.0"
opentelemetry-exporter-otlp = "1.26.0"
opentelemetry-exporter-otlp-proto-common = "1.26.0"
opentelemetry-exporter-otlp-proto-grpc = "1.26.0"
opentelemetry-exporter-otlp-proto-http = "1.26.0"
opentelemetry-instrumentation = "0.47b0"
opentelemetry-proto = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-semantic-conventions = "0.47b0"
ordered-set = "4.1.0"
orjson = "3.10.7"
packaging = "23.2"
pandas = "1.5.3"
parameterized = "0.9.0"
peft = "0.12.0"
pillow = "10.4.0"
ply = "3.11"
pre-commit = "3.5.0"
protobuf = "3.20.3"
psutil = "5.9.8"
ptyprocess = "0.7.0"
pyarrow = "17.0.0"
pygoogletranslation = "2.0.6"
pyjwt = "2.9.0"
pypdf = "4.3.1"
pypdf2 = "3.0.1"
pyqt5 = "5.15.10"
pysbd = "0.3.4"
python-daemon = "2.3.2"
python-dotenv = "1.0.1"
python-engineio = "4.9.1"
python-iso639 = "2024.4.27"
python-magic = "0.4.27"
python-multipart = "0.0.9"
python-socketio = "5.11.3"
rapidfuzz = "3.9.6"
ratelim = "0.1.6"
regex = "2024.7.24"
requests-toolbelt = "0.9.1"
rfc3986 = "1.5.0"
s3transfer = "0.10.2"
sacremoses = "0.1.1"
safetensors = "0.4.4"
scikit-learn = "1.0.2"
sentence-transformers = "3.0.1"
sentencepiece = "0.2.0"
shap = "0.41.0"
simple-websocket = "1.0.0"
slicer = "0.0.7"
starlette = "0.37.2"
sympy = "1.13.2"
syncer = "2.0.3"
tabulate = "0.9.0"
threadpoolctl = "3.5.0"
tiktoken = "0.7.0"
tokenizers = "0.19.1"
torch = "2.4.0"
transformers = "4.44.0"
triton = "3.0.0"
types-requests = "2.31.0.6"
types-urllib3 = "1.26.25.14"
tzdata = "2024.1"
unidecode = "1.3.8"
uptrace = "1.26.0"
urllib3 = "1.26.19"
uvicorn = "0.25.0"
virtualenv = "20.26.3"
watchfiles = "0.20.0"
webencodings = "0.5.1"
wrapt = "1.16.0"
wsproto = "1.2.0"
xxhash = "3.5.0"
zstandard = "0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
