[tool.poetry]
name = "trial"
version = "0.1.0"
description = ""
authors = ["George Okello <142576760+G-Okello-O@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.402"
langchain = "^0.2.15"
langchain-community = "^0.2.15"
transformers = "^4.44.2"
sentence-transformers = "^3.0.1"
tiktoken = "^0.7.0"
openpyxl = "^3.1.5"
faiss-cpu = "^1.8.0.post1"
cohere = "^5.9.0"
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
langchain-cohere = "^0.2.3"
geocoder = "^1.38.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
